<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menuGroupPlaying">
		<item android:id="@+id/menuPause" android:title="@string/menu_pause"
		android:icon="@android:drawable/ic_media_pause" />
    </group>
    <group android:id="@+id/menuGroupPaused" android:visible="false">
		<item android:id="@+id/menuPlay" android:title="@string/menu_play"
		android:icon="@android:drawable/ic_media_play" />
    </group>
<item android:id="@+id/menuSetAs" android:title="@string/menu_set_as"
		android:icon="@android:drawable/ic_menu_set_as" />
	<item android:id="@+id/menuShare" android:title="@string/menu_share"
		android:icon="@android:drawable/ic_menu_share" />	
	<item android:id="@+id/menuTitle" android:title="@string/menu_toggle_title"
		android:icon="@android:drawable/ic_menu_info_details" />
	<item android:id="@+id/menuPreferences" android:title="@string/menu_preferences"
		android:icon="@android:drawable/ic_menu_preferences" />	
		
			<item
    android:id="@+id/menuChromecast"
    android:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
android:actionViewClass="android.support.v7.app.MediaRouteButton"
    android:showAsAction="always"
    android:title="@string/menu_chromecast"/>	

</menu>
